--- a/public/css/guru.css
+++ b/public/css/guru.css
@@ -27,3 +27,15 @@
 .section-absensi .container .row.enam .btn {
   background-color: #0077B6;
 }
+
+.data-kelas .wrapper__class {
+  margin-top: 60px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+.data-kelas .wrapper__class a {
+  height: 60px !important;
+  display: grid;
+  place-content: center;
+}
